# Resnet-Pytorch

./: README.md  evaluate.py  model2onnx.py  onnx_infer.py  resnet.py  train.py
checkpoint/: model.onnx  resnet_180.pth
data/: 0_3.tiff  1_8.tiff  2_8.tiff  3_0.tiff  4_6.tiff  5_6.tiff  6_1.tiff  7_6.tiff  8_3.tiff  9_1.tiff  readme.md
log/: events.out.tfevents.1564147398.zhulf-System-Product-Name
trt_infer/: CMakeLists.txt  trt_infer.cpp
